add: create expenses service and update swagger
