# services/expenses/validation.go
@@ -1,6 +1,8 @@
 package expenses
 
 import (
+	"github.com/gin-gonic/gin"
+	accounting "github.com/ppeymann/accounting.git"
 	"github.com/ppeymann/accounting.git/services"
 	validations "github.com/ppeymann/accounting.git/validation"
 )
@@ -21,4 +23,14 @@ func NewValidationService(schemaPath string, service services.ExpensesService) (
 		schemas: schemas,
 		next:    service,
 	}, nil
+}
+
+// Create implements services.ExpensesService.
+func (v *validationService) Create(input *services.ExpensesInput, ctx *gin.Context) *accounting.BaseResult {
+	err := validations.Validate(input, v.schemas)
+	if err != nil {
+		return err
+	}
+
+	return v.next.Create(input, ctx)
 }
